@@ -154,6 +154,8 @@ multi-signature generation
 87. debian/rules: fixed typo qlocal_upgrade, qupgrade script names
 88. svctool: fixes for mariadb ssl setup (permissions)
 89. svctool: fix libindimail path on debian
+- 01/04/2023
+90. indimail_stub.c: refactored getlibObject() function
 
 * Mon Jan 30 2023 13:14:56 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.2-1.1%{?dist}
 Release 3.0.2-1.1 Start 08/09/2022 End 30/11/2023
